--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,19 @@
 #spring.security.user.password = default
 
 # config database H2
-#spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.sql.init.platform=h2
 
 # config port for H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 server.port=8082
+
+# JPA settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # Disable spring.jpa.open-in-view
 spring.jpa.open-in-view=false
